:meat_on_bone: thanks to TJ for some good critical feedback. also went with some type fixes, got rid of drop shadows, and did grid works, and fixed a couple issues w/ layout the grid of posts at the bottom of each page now has more info, so it looks more intentional fixed the nav so it lines up w/ the main container, even though I thrive on asymetry, its aligned and I zagged towrards said asymetry w/ some other parts...

--- a/themes/blank/src/sass/partials/_articles.scss
+++ b/themes/blank/src/sass/partials/_articles.scss
@@ -90,7 +90,8 @@ time {
   } //
 }
 
-[data-vendor] {
+[data-vendor],
+[data-date] {
   font-size: .5em;
   left: 0;
   top: 0;
