--- a/themes/blank/src/sass/partials/_grid.scss
+++ b/themes/blank/src/sass/partials/_grid.scss
@@ -67,7 +67,7 @@ $left-column: 25vw;
       }
 
       @include media(">=desktop"){
-        grid-column: 2 / 5;
+        grid-column: 2 / 4;
       }
     }
   }
@@ -127,7 +127,7 @@ $left-column: 25vw;
        }
 
        @include media(">=tablet") {
-        grid-column: 2 / 5;
+        grid-column: 2 / 4;
         grid-row: 1 / 1;
        }
       } // subtitle grid container
@@ -144,7 +144,7 @@ $left-column: 25vw;
        } // / phone breakpoint
 
         @include media(">=tablet") {
-          grid-column: 1 / 4;
+          grid-column: 2 / 5;
        }
     } // /.jumbo-grid-container
 
