--- a/themes/blank/src/sass/partials/_nav.scss
+++ b/themes/blank/src/sass/partials/_nav.scss
@@ -37,7 +37,7 @@
             text-decoration: none;
           }
           &:nth-child(n) {
-            flex-basis: 15%;
+            flex-basis: 25%;
           }
         // &:nth-child(1) {
         //   flex-basis: 15%;
